# Listify

./: .gitignore  pyproject.toml
List/: .gitignore  asgi.py  db.sqlite3  pyproject.toml  settings.py  token.py  urls.py  wsgi.py
List/List/: asgi.py  settings.py  token.py  urls.py  wsgi.py
List/apps/list/: admin.py  models.py  serializers.py  urls.py  views.py
List/apps/profiles/: admin.py  models.py  serializers.py  urls.py  views.py
List/apps/user/: admin.py  models.py
apps/list/: admin.py  functions.py  models.py  serializers.py  urls.py  views.py
apps/list/migrations/: 0001_initial.py  0002_initial.py
apps/payments/: admin.py  models.py  serializers.py  urls.py  views.py
apps/profiles/: admin.py  models.py  serializers.py  urls.py  views.py
apps/profiles/migrations/: 0001_initial.py  0002_initial.py
apps/user/: admin.py  models.py  serializers.py  urls.py  views.py
apps/user/migrations/: 0001_initial.py
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.css  App.js
frontend/src/components/: Test.jsx
frontend/src/components/Detail/: Detail.js
frontend/src/components/Header/: Header.js
frontend/src/components/List/: Create.js  Create.jsx  Delete.js  Delete.jsx  Detail.css  Detail.js  Detail.jsx  List.css  List.js  List.jsx
frontend/src/components/Login/: Login.css  Login.js
frontend/src/components/NavBar/: NavBar.css  NavBar.js  NavBar.jsx
frontend/src/components/Profile/: Profile.css  Profile.jsx  ProfileDetail.js  ProfileDetail.jsx
frontend/src/components/functions/: Headers.js  (+1 more)
(+5 files in other folders)
